vol and drift Hull-White

--- a/cal_theory/cholesky_decomposition.ipynb
+++ b/cal_theory/cholesky_decomposition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "24520918",
    "metadata": {},
    "outputs": [
@@ -16,13 +16,13 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}1 & 0 & 0\\\\r_{sv} & \\sqrt{1 - r_{sv}^{2}} & 0\\\\r_{sr} & \\frac{- r_{sr} r_{sv} + r_{vr}}{\\sqrt{1 - r_{sv}^{2}}} & \\sqrt{- r_{sr}^{2} + 1 - \\frac{\\left(- r_{sr} r_{sv} + r_{vr}\\right)^{2}}{1 - r_{sv}^{2}}}\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}1 & 0 & 0\\\\\\rho_{sv} & \\sqrt{1 - \\rho_{sv}^{2}} & 0\\\\\\rho_{sr} & \\frac{- \\rho_{sr} \\rho_{sv} + \\rho_{vr}}{\\sqrt{1 - \\rho_{sv}^{2}}} & \\sqrt{- \\rho_{sr}^{2} + 1 - \\frac{\\left(- \\rho_{sr} \\rho_{sv} + \\rho_{vr}\\right)^{2}}{1 - \\rho_{sv}^{2}}}\\end{matrix}\\right]$"
       ],
       "text/plain": [
        "Matrix([\n",
-       "[   1,                                     0,                                                         0],\n",
-       "[r_sv,                     sqrt(1 - r_sv**2),                                                         0],\n",
-       "[r_sr, (-r_sr*r_sv + r_vr)/sqrt(1 - r_sv**2), sqrt(-r_sr**2 + 1 - (-r_sr*r_sv + r_vr)**2/(1 - r_sv**2))]])"
+       "[     1,                                             0,                                                                   0],\n",
+       "[rho_sv,                           sqrt(1 - rho_sv**2),                                                                   0],\n",
+       "[rho_sr, (-rho_sr*rho_sv + rho_vr)/sqrt(1 - rho_sv**2), sqrt(-rho_sr**2 + 1 - (-rho_sr*rho_sv + rho_vr)**2/(1 - rho_sv**2))]])"
       ]
      },
      "metadata": {},
@@ -32,12 +32,12 @@
    "source": [
     "from IPython.display import display\n",
     "from sympy import *\n",
-    "x, y, r_sv, r_sr, r_vr = symbols('x y r_sv, r_sr, r_vr')\n",
+    "x, y, rho_sv, rho_sr, rho_vr = symbols(r'x y rho_sv, rho_sr, rho_vr')\n",
     "\n",
     "M = Matrix([\n",
-    "    [1, r_sv, r_sr ],\n",
-    "    [ r_sv, 1, r_vr],\n",
-    "    [r_sr, r_vr, 1 ]\n",
+    "    [1, rho_sv, rho_sr ],\n",
+    "    [ rho_sv, 1, rho_vr],\n",
+    "    [rho_sr, rho_vr, 1 ]\n",
     "])\n",
     "\n",
     "print(M == M.T)\n",
