--- a/cal_theory/cholesky_decomposition.ipynb
+++ b/cal_theory/cholesky_decomposition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "id": "24520918",
    "metadata": {},
    "outputs": [
@@ -27,6 +27,36 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\sqrt{v_t} & 0 & 0\\\\0 & \\sigma \\sqrt{v_t} & 0\\\\0 & 0 & \\eta\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[\\sqrt{v_t},                 0,    0],\n",
+       "[         0, \\sigma*\\sqrt{v_t},    0],\n",
+       "[         0,                 0, \\eta]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\sqrt{v_t} & 0 & 0\\\\\\sigma \\sqrt{v_t} \\rho_{sv} & \\sigma \\sqrt{v_t} \\sqrt{1 - \\rho_{sv}^{2}} & 0\\\\\\eta \\rho_{sr} & \\frac{\\eta \\left(- \\rho_{sr} \\rho_{sv} + \\rho_{vr}\\right)}{\\sqrt{1 - \\rho_{sv}^{2}}} & \\eta \\sqrt{- \\rho_{sr}^{2} + 1 - \\frac{\\left(- \\rho_{sr} \\rho_{sv} + \\rho_{vr}\\right)^{2}}{1 - \\rho_{sv}^{2}}}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[              \\sqrt{v_t},                                                  0,                                                                        0],\n",
+       "[\\sigma*\\sqrt{v_t}*rho_sv,              \\sigma*\\sqrt{v_t}*sqrt(1 - rho_sv**2),                                                                        0],\n",
+       "[             \\eta*rho_sr, \\eta*(-rho_sr*rho_sv + rho_vr)/sqrt(1 - rho_sv**2), \\eta*sqrt(-rho_sr**2 + 1 - (-rho_sr*rho_sv + rho_vr)**2/(1 - rho_sv**2))]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -42,13 +72,24 @@
     "\n",
     "print(M == M.T)\n",
     "L = M.cholesky(hermitian=False)\n",
-    "display(L)"
+    "display(L)\n",
+    "\n",
+    "v_t, sigma, eta = symbols(r'\\sqrt{v_t}, \\sigma, \\eta')\n",
+    "\n",
+    "N = Matrix([\n",
+    "    [v_t, 0, 0],\n",
+    "    [0, sigma*v_t, 0],\n",
+    "    [0, 0, eta ]\n",
+    "])\n",
+    "\n",
+    "display(N)\n",
+    "display(N*L)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2e743c6",
+   "id": "f2e8b9e3",
    "metadata": {},
    "outputs": [],
    "source": []
