--- a/cal_theory/cholesky_decomposition.ipynb
+++ b/cal_theory/cholesky_decomposition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "24520918",
    "metadata": {},
    "outputs": [
@@ -57,6 +57,21 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\sqrt{v_t}^{2} & \\sigma \\sqrt{v_t}^{2} \\rho_{sv} & \\eta \\sqrt{v_t} \\rho_{sr}\\\\\\sigma \\sqrt{v_t}^{2} \\rho_{sv} & \\sigma^{2} \\sqrt{v_t}^{2} & \\eta \\sigma \\sqrt{v_t} \\rho_{vr}\\\\\\eta \\sqrt{v_t} \\rho_{sr} & \\eta \\sigma \\sqrt{v_t} \\rho_{vr} & \\eta^{2}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[              \\sqrt{v_t}**2,   \\sigma*\\sqrt{v_t}**2*rho_sv,        \\eta*\\sqrt{v_t}*rho_sr],\n",
+       "[\\sigma*\\sqrt{v_t}**2*rho_sv,       \\sigma**2*\\sqrt{v_t}**2, \\eta*\\sigma*\\sqrt{v_t}*rho_vr],\n",
+       "[     \\eta*\\sqrt{v_t}*rho_sr, \\eta*\\sigma*\\sqrt{v_t}*rho_vr,                       \\eta**2]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -83,13 +98,120 @@
     "])\n",
     "\n",
     "display(N)\n",
-    "display(N*L)"
+    "display(N*L)\n",
+    "sigma = N*L\n",
+    "\n",
+    "display(simplify(sigma*sigma.transpose()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f2e8b9e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}1 & 0 & 0\\\\\\rho_{sv} & \\sqrt{1 - \\rho_{sv}^{2}} & 0\\\\0 & 0 & 1\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[     1,                   0, 0],\n",
+       "[rho_sv, sqrt(1 - rho_sv**2), 0],\n",
+       "[     0,                   0, 1]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\sqrt{v_t} & 0 & 0\\\\0 & \\sigma \\sqrt{v_t} & 0\\\\0 & 0 & \\eta\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[\\sqrt{v_t},                 0,    0],\n",
+       "[         0, \\sigma*\\sqrt{v_t},    0],\n",
+       "[         0,                 0, \\eta]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\sqrt{v_t} & 0 & 0\\\\\\sigma \\sqrt{v_t} \\rho_{sv} & \\sigma \\sqrt{v_t} \\sqrt{1 - \\rho_{sv}^{2}} & 0\\\\0 & 0 & \\eta\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[              \\sqrt{v_t},                                     0,    0],\n",
+       "[\\sigma*\\sqrt{v_t}*rho_sv, \\sigma*\\sqrt{v_t}*sqrt(1 - rho_sv**2),    0],\n",
+       "[                       0,                                     0, \\eta]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\sqrt{v_t}^{2} & \\sigma \\sqrt{v_t}^{2} \\rho_{sv} & 0\\\\\\sigma \\sqrt{v_t}^{2} \\rho_{sv} & \\sigma^{2} \\sqrt{v_t}^{2} & 0\\\\0 & 0 & \\eta^{2}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[              \\sqrt{v_t}**2, \\sigma*\\sqrt{v_t}**2*rho_sv,       0],\n",
+       "[\\sigma*\\sqrt{v_t}**2*rho_sv,     \\sigma**2*\\sqrt{v_t}**2,       0],\n",
+       "[                          0,                           0, \\eta**2]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import display\n",
+    "from sympy import *\n",
+    "x, y, rho_sv, rho_sr, rho_vr = symbols(r'x y rho_sv, rho_sr, rho_vr')\n",
+    "v_t, sigma, eta = symbols(r'\\sqrt{v_t}, \\sigma, \\eta')\n",
+    "\n",
+    "\n",
+    "M = Matrix([\n",
+    "    [1, rho_sv, 0 ],\n",
+    "    [ rho_sv, 1, 0],\n",
+    "    [0, 0, 1 ]\n",
+    "])\n",
+    "\n",
+    "print(M == M.T)\n",
+    "L = M.cholesky(hermitian=False)\n",
+    "display(L)\n",
+    "\n",
+    "N = Matrix([\n",
+    "    [v_t, 0, 0],\n",
+    "    [0, sigma*v_t, 0],\n",
+    "    [0, 0, eta ]\n",
+    "])\n",
+    "\n",
+    "display(N)\n",
+    "display(N*L)\n",
+    "sigma = N*L\n",
+    "\n",
+    "display(simplify(sigma*sigma.transpose()))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2e8b9e3",
+   "id": "13182fcd",
    "metadata": {},
    "outputs": [],
    "source": []
