black_sholes added, change dir

--- a/cal_theory/cholesky_decomposition.ipynb
+++ b/cal_theory/cholesky_decomposition.ipynb
@@ -2,72 +2,148 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "24520918",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import display\n",
+    "from sympy import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "59c2e48d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "Matrix M\n"
      ]
     },
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}1 & 0 & 0\\\\\\rho_{sv} & \\sqrt{1 - \\rho_{sv}^{2}} & 0\\\\\\rho_{sr} & \\frac{- \\rho_{sr} \\rho_{sv} + \\rho_{vr}}{\\sqrt{1 - \\rho_{sv}^{2}}} & \\sqrt{- \\rho_{sr}^{2} + 1 - \\frac{\\left(- \\rho_{sr} \\rho_{sv} + \\rho_{vr}\\right)^{2}}{1 - \\rho_{sv}^{2}}}\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}1 & \\rho_{rv} & \\rho_{rx}\\\\\\rho_{rv} & 1 & \\rho_{vx}\\\\\\rho_{rx} & \\rho_{vx} & 1\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[     1, rho_rv, rho_rx],\n",
+       "[rho_rv,      1, rho_vx],\n",
+       "[rho_rx, rho_vx,      1]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix L (lower triangular matrix from decomposition)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}1 & 0 & 0\\\\\\rho_{rv} & \\sqrt{1 - \\rho_{rv}^{2}} & 0\\\\\\rho_{rx} & \\frac{- \\rho_{rv} \\rho_{rx} + \\rho_{vx}}{\\sqrt{1 - \\rho_{rv}^{2}}} & \\sqrt{- \\rho_{rx}^{2} + 1 - \\frac{\\left(- \\rho_{rv} \\rho_{rx} + \\rho_{vx}\\right)^{2}}{1 - \\rho_{rv}^{2}}}\\end{matrix}\\right]$"
       ],
       "text/plain": [
        "Matrix([\n",
        "[     1,                                             0,                                                                   0],\n",
-       "[rho_sv,                           sqrt(1 - rho_sv**2),                                                                   0],\n",
-       "[rho_sr, (-rho_sr*rho_sv + rho_vr)/sqrt(1 - rho_sv**2), sqrt(-rho_sr**2 + 1 - (-rho_sr*rho_sv + rho_vr)**2/(1 - rho_sv**2))]])"
+       "[rho_rv,                           sqrt(1 - rho_rv**2),                                                                   0],\n",
+       "[rho_rx, (-rho_rv*rho_rx + rho_vx)/sqrt(1 - rho_rv**2), sqrt(-rho_rx**2 + 1 - (-rho_rv*rho_rx + rho_vx)**2/(1 - rho_rv**2))]])"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix N (volatilities)\n"
+     ]
+    },
+    {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}\\sqrt{v_t} & 0 & 0\\\\0 & \\sigma \\sqrt{v_t} & 0\\\\0 & 0 & \\eta\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}\\eta & 0 & 0\\\\0 & \\sigma \\sqrt{v_t} & 0\\\\0 & 0 & \\sqrt{v_t}\\end{matrix}\\right]$"
       ],
       "text/plain": [
        "Matrix([\n",
-       "[\\sqrt{v_t},                 0,    0],\n",
-       "[         0, \\sigma*\\sqrt{v_t},    0],\n",
-       "[         0,                 0, \\eta]])"
+       "[\\eta,                 0,          0],\n",
+       "[   0, \\sigma*\\sqrt{v_t},          0],\n",
+       "[   0,                 0, \\sqrt{v_t}]])"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sigma matrix\n"
+     ]
+    },
+    {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}\\sqrt{v_t} & 0 & 0\\\\\\sigma \\sqrt{v_t} \\rho_{sv} & \\sigma \\sqrt{v_t} \\sqrt{1 - \\rho_{sv}^{2}} & 0\\\\\\eta \\rho_{sr} & \\frac{\\eta \\left(- \\rho_{sr} \\rho_{sv} + \\rho_{vr}\\right)}{\\sqrt{1 - \\rho_{sv}^{2}}} & \\eta \\sqrt{- \\rho_{sr}^{2} + 1 - \\frac{\\left(- \\rho_{sr} \\rho_{sv} + \\rho_{vr}\\right)^{2}}{1 - \\rho_{sv}^{2}}}\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}\\eta & 0 & 0\\\\\\sigma \\sqrt{v_t} \\rho_{rv} & \\sigma \\sqrt{v_t} \\sqrt{1 - \\rho_{rv}^{2}} & 0\\\\\\sqrt{v_t} \\rho_{rx} & \\frac{\\sqrt{v_t} \\left(- \\rho_{rv} \\rho_{rx} + \\rho_{vx}\\right)}{\\sqrt{1 - \\rho_{rv}^{2}}} & \\sqrt{v_t} \\sqrt{- \\rho_{rx}^{2} + 1 - \\frac{\\left(- \\rho_{rv} \\rho_{rx} + \\rho_{vx}\\right)^{2}}{1 - \\rho_{rv}^{2}}}\\end{matrix}\\right]$"
       ],
       "text/plain": [
        "Matrix([\n",
-       "[              \\sqrt{v_t},                                                  0,                                                                        0],\n",
-       "[\\sigma*\\sqrt{v_t}*rho_sv,              \\sigma*\\sqrt{v_t}*sqrt(1 - rho_sv**2),                                                                        0],\n",
-       "[             \\eta*rho_sr, \\eta*(-rho_sr*rho_sv + rho_vr)/sqrt(1 - rho_sv**2), \\eta*sqrt(-rho_sr**2 + 1 - (-rho_sr*rho_sv + rho_vr)**2/(1 - rho_sv**2))]])"
+       "[                    \\eta,                                                        0,                                                                              0],\n",
+       "[\\sigma*\\sqrt{v_t}*rho_rv,                    \\sigma*\\sqrt{v_t}*sqrt(1 - rho_rv**2),                                                                              0],\n",
+       "[       \\sqrt{v_t}*rho_rx, \\sqrt{v_t}*(-rho_rv*rho_rx + rho_vx)/sqrt(1 - rho_rv**2), \\sqrt{v_t}*sqrt(-rho_rx**2 + 1 - (-rho_rv*rho_rx + rho_vx)**2/(1 - rho_rv**2))]])"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Instantaneous Correlation Matrix\n"
+     ]
+    },
+    {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}\\sqrt{v_t}^{2} & \\sigma \\sqrt{v_t}^{2} \\rho_{sv} & \\eta \\sqrt{v_t} \\rho_{sr}\\\\\\sigma \\sqrt{v_t}^{2} \\rho_{sv} & \\sigma^{2} \\sqrt{v_t}^{2} & \\eta \\sigma \\sqrt{v_t} \\rho_{vr}\\\\\\eta \\sqrt{v_t} \\rho_{sr} & \\eta \\sigma \\sqrt{v_t} \\rho_{vr} & \\eta^{2}\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}\\eta^{2} & \\eta \\sigma \\sqrt{v_t} \\rho_{rv} & \\eta \\sqrt{v_t} \\rho_{rx}\\\\\\eta \\sigma \\sqrt{v_t} \\rho_{rv} & \\sigma^{2} \\sqrt{v_t}^{2} & \\sigma \\sqrt{v_t}^{2} \\rho_{vx}\\\\\\eta \\sqrt{v_t} \\rho_{rx} & \\sigma \\sqrt{v_t}^{2} \\rho_{vx} & \\sqrt{v_t}^{2}\\end{matrix}\\right]$"
       ],
       "text/plain": [
        "Matrix([\n",
-       "[              \\sqrt{v_t}**2,   \\sigma*\\sqrt{v_t}**2*rho_sv,        \\eta*\\sqrt{v_t}*rho_sr],\n",
-       "[\\sigma*\\sqrt{v_t}**2*rho_sv,       \\sigma**2*\\sqrt{v_t}**2, \\eta*\\sigma*\\sqrt{v_t}*rho_vr],\n",
-       "[     \\eta*\\sqrt{v_t}*rho_sr, \\eta*\\sigma*\\sqrt{v_t}*rho_vr,                       \\eta**2]])"
+       "[                      \\eta**2, \\eta*\\sigma*\\sqrt{v_t}*rho_rv,      \\eta*\\sqrt{v_t}*rho_rx],\n",
+       "[\\eta*\\sigma*\\sqrt{v_t}*rho_rv,       \\sigma**2*\\sqrt{v_t}**2, \\sigma*\\sqrt{v_t}**2*rho_vx],\n",
+       "[       \\eta*\\sqrt{v_t}*rho_rx,   \\sigma*\\sqrt{v_t}**2*rho_vx,               \\sqrt{v_t}**2]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix L * B_t\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}B_{r}\\\\B_{r} \\rho_{rv} + B_{v} \\sqrt{1 - \\rho_{rv}^{2}}\\\\B_{r} \\rho_{rx} + \\frac{B_{v} \\left(- \\rho_{rv} \\rho_{rx} + \\rho_{vx}\\right)}{\\sqrt{1 - \\rho_{rv}^{2}}} + B_{x} \\sqrt{- \\rho_{rx}^{2} + 1 - \\frac{\\left(- \\rho_{rv} \\rho_{rx} + \\rho_{vx}\\right)^{2}}{1 - \\rho_{rv}^{2}}}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[                                                                                                                                     B_r],\n",
+       "[                                                                                                    B_r*rho_rv + B_v*sqrt(1 - rho_rv**2)],\n",
+       "[B_r*rho_rx + B_v*(-rho_rv*rho_rx + rho_vx)/sqrt(1 - rho_rv**2) + B_x*sqrt(-rho_rx**2 + 1 - (-rho_rv*rho_rx + rho_vx)**2/(1 - rho_rv**2))]])"
       ]
      },
      "metadata": {},
@@ -75,38 +151,61 @@
     }
    ],
    "source": [
-    "from IPython.display import display\n",
-    "from sympy import *\n",
-    "x, y, rho_sv, rho_sr, rho_vr = symbols(r'x y rho_sv, rho_sr, rho_vr')\n",
+    "x, y, rho_vx, rho_rx, rho_rv = symbols(r'x y rho_vx, rho_rx, rho_rv')\n",
     "\n",
     "M = Matrix([\n",
-    "    [1, rho_sv, rho_sr ],\n",
-    "    [ rho_sv, 1, rho_vr],\n",
-    "    [rho_sr, rho_vr, 1 ]\n",
+    "    [1, rho_rv, rho_rx ],\n",
+    "    [ rho_rv, 1, rho_vx],\n",
+    "    [rho_rx, rho_vx, 1 ]\n",
     "])\n",
     "\n",
-    "print(M == M.T)\n",
+    "print(\"Matrix M\")\n",
+    "display(M)\n",
+    "# print(M == M.T)\n",
     "L = M.cholesky(hermitian=False)\n",
+    "print(\"Matrix L (lower triangular matrix from decomposition)\")\n",
     "display(L)\n",
     "\n",
     "v_t, sigma, eta = symbols(r'\\sqrt{v_t}, \\sigma, \\eta')\n",
     "\n",
     "N = Matrix([\n",
-    "    [v_t, 0, 0],\n",
+    "    [eta, 0, 0],\n",
     "    [0, sigma*v_t, 0],\n",
-    "    [0, 0, eta ]\n",
+    "    [0, 0, v_t]\n",
     "])\n",
     "\n",
-    "display(N)\n",
-    "display(N*L)\n",
-    "sigma = N*L\n",
     "\n",
-    "display(simplify(sigma*sigma.transpose()))"
+    "print(\"Matrix N (volatilities)\")\n",
+    "display(N)\n",
+    "\n",
+    "print(\"Sigma matrix\")\n",
+    "display(N*L)\n",
+    "\n",
+    "\n",
+    "print(\"Instantaneous Correlation Matrix\")\n",
+    "sigma = N*L\n",
+    "display(simplify(sigma*sigma.transpose()))\n",
+    "\n",
+    "\n",
+    "print(\"Matrix L * B_t\")\n",
+    "b_r, b_v, b_x = symbols(r'B_r B_v B_x')\n",
+    "B = Matrix([\n",
+    "    [b_r, b_v, b_x]\n",
+    "])\n",
+    "display(L*B.transpose())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "id": "5d45f59c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "f2e8b9e3",
    "metadata": {},
    "outputs": [
@@ -179,8 +278,6 @@
     }
    ],
    "source": [
-    "from IPython.display import display\n",
-    "from sympy import *\n",
     "x, y, rho_sv, rho_sr, rho_vr = symbols(r'x y rho_sv, rho_sr, rho_vr')\n",
     "v_t, sigma, eta = symbols(r'\\sqrt{v_t}, \\sigma, \\eta')\n",
     "\n",
@@ -210,11 +307,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "13182fcd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}1 & 0 & \\rho_{sr}\\\\0 & 1 & \\rho_{sv}\\\\\\rho_{sr} & \\rho_{sv} & 1\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[     1,      0, rho_sr],\n",
+       "[     0,      1, rho_sv],\n",
+       "[rho_sr, rho_sv,      1]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}1 & 0 & 0\\\\0 & 1 & 0\\\\\\rho_{sr} & \\rho_{sv} & \\sqrt{- \\rho_{sr}^{2} - \\rho_{sv}^{2} + 1}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[     1,      0,                                0],\n",
+       "[     0,      1,                                0],\n",
+       "[rho_sr, rho_sv, sqrt(-rho_sr**2 - rho_sv**2 + 1)]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x, y, rho_sv, rho_sr, rho_vr = symbols(r'x y rho_sv, rho_sr, rho_vr')\n",
+    "v_t, sigma, eta = symbols(r'\\sqrt{v_t}, \\sigma, \\eta')\n",
+    "\n",
+    "\n",
+    "M = Matrix([\n",
+    "    [1, 0, rho_sr],\n",
+    "    [0, 1, rho_sv],\n",
+    "    [rho_sr, rho_sv, 1 ]\n",
+    "])\n",
+    "\n",
+    "display(M)\n",
+    "L = M.cholesky(hermitian=False)\n",
+    "display(L)"
+   ]
   }
  ],
  "metadata": {
@@ -233,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
