Black Formatter - all files

--- a/cal_theory/cholesky_decomposition.ipynb
+++ b/cal_theory/cholesky_decomposition.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "24520918",
    "metadata": {},
    "outputs": [],
    "source": [
     "from IPython.display import display\n",
-    "from sympy import *"
+    "from sympy import *\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "59c2e48d",
    "metadata": {},
    "outputs": [
@@ -151,13 +151,9 @@
     }
    ],
    "source": [
-    "x, y, rho_vx, rho_rx, rho_rv = symbols(r'x y rho_vx, rho_rx, rho_rv')\n",
+    "x, y, rho_vx, rho_rx, rho_rv = symbols(r\"x y rho_vx, rho_rx, rho_rv\")\n",
     "\n",
-    "M = Matrix([\n",
-    "    [1, rho_rv, rho_rx ],\n",
-    "    [ rho_rv, 1, rho_vx],\n",
-    "    [rho_rx, rho_vx, 1 ]\n",
-    "])\n",
+    "M = Matrix([[1, rho_rv, rho_rx], [rho_rv, 1, rho_vx], [rho_rx, rho_vx, 1]])\n",
     "\n",
     "print(\"Matrix M\")\n",
     "display(M)\n",
@@ -166,33 +162,27 @@
     "print(\"Matrix L (lower triangular matrix from decomposition)\")\n",
     "display(L)\n",
     "\n",
-    "v_t, sigma, eta = symbols(r'\\sqrt{v_t}, \\sigma, \\eta')\n",
+    "v_t, sigma, eta = symbols(r\"\\sqrt{v_t}, \\sigma, \\eta\")\n",
     "\n",
-    "N = Matrix([\n",
-    "    [eta, 0, 0],\n",
-    "    [0, sigma*v_t, 0],\n",
-    "    [0, 0, v_t]\n",
-    "])\n",
+    "N = Matrix([[eta, 0, 0], [0, sigma * v_t, 0], [0, 0, v_t]])\n",
     "\n",
     "\n",
     "print(\"Matrix N (volatilities)\")\n",
     "display(N)\n",
     "\n",
     "print(\"Sigma matrix\")\n",
-    "display(N*L)\n",
+    "display(N * L)\n",
     "\n",
     "\n",
     "print(\"Instantaneous Correlation Matrix\")\n",
-    "sigma = N*L\n",
-    "display(simplify(sigma*sigma.transpose()))\n",
+    "sigma = N * L\n",
+    "display(simplify(sigma * sigma.transpose()))\n",
     "\n",
     "\n",
     "print(\"Matrix L * B_t\")\n",
-    "b_r, b_v, b_x = symbols(r'B_r B_v B_x')\n",
-    "B = Matrix([\n",
-    "    [b_r, b_v, b_x]\n",
-    "])\n",
-    "display(L*B.transpose())"
+    "b_r, b_v, b_x = symbols(r\"B_r B_v B_x\")\n",
+    "B = Matrix([[b_r, b_v, b_x]])\n",
+    "display(L * B.transpose())"
    ]
   },
   {
@@ -205,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "f2e8b9e3",
    "metadata": {},
    "outputs": [
@@ -278,36 +268,28 @@
     }
    ],
    "source": [
-    "x, y, rho_sv, rho_sr, rho_vr = symbols(r'x y rho_sv, rho_sr, rho_vr')\n",
-    "v_t, sigma, eta = symbols(r'\\sqrt{v_t}, \\sigma, \\eta')\n",
+    "x, y, rho_sv, rho_sr, rho_vr = symbols(r\"x y rho_sv, rho_sr, rho_vr\")\n",
+    "v_t, sigma, eta = symbols(r\"\\sqrt{v_t}, \\sigma, \\eta\")\n",
     "\n",
     "\n",
-    "M = Matrix([\n",
-    "    [1, rho_sv, 0 ],\n",
-    "    [ rho_sv, 1, 0],\n",
-    "    [0, 0, 1 ]\n",
-    "])\n",
+    "M = Matrix([[1, rho_sv, 0], [rho_sv, 1, 0], [0, 0, 1]])\n",
     "\n",
     "print(M == M.T)\n",
     "L = M.cholesky(hermitian=False)\n",
     "display(L)\n",
     "\n",
-    "N = Matrix([\n",
-    "    [v_t, 0, 0],\n",
-    "    [0, sigma*v_t, 0],\n",
-    "    [0, 0, eta ]\n",
-    "])\n",
+    "N = Matrix([[v_t, 0, 0], [0, sigma * v_t, 0], [0, 0, eta]])\n",
     "\n",
     "display(N)\n",
-    "display(N*L)\n",
-    "sigma = N*L\n",
+    "display(N * L)\n",
+    "sigma = N * L\n",
     "\n",
-    "display(simplify(sigma*sigma.transpose()))\n"
+    "display(simplify(sigma * sigma.transpose()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "13182fcd",
    "metadata": {},
    "outputs": [
@@ -343,15 +325,11 @@
     }
    ],
    "source": [
-    "x, y, rho_sv, rho_sr, rho_vr = symbols(r'x y rho_sv, rho_sr, rho_vr')\n",
-    "v_t, sigma, eta = symbols(r'\\sqrt{v_t}, \\sigma, \\eta')\n",
+    "x, y, rho_sv, rho_sr, rho_vr = symbols(r\"x y rho_sv, rho_sr, rho_vr\")\n",
+    "v_t, sigma, eta = symbols(r\"\\sqrt{v_t}, \\sigma, \\eta\")\n",
     "\n",
     "\n",
-    "M = Matrix([\n",
-    "    [1, 0, rho_sr],\n",
-    "    [0, 1, rho_sv],\n",
-    "    [rho_sr, rho_sv, 1 ]\n",
-    "])\n",
+    "M = Matrix([[1, 0, rho_sr], [0, 1, rho_sv], [rho_sr, rho_sv, 1]])\n",
     "\n",
     "display(M)\n",
     "L = M.cholesky(hermitian=False)\n",
